# octabot

./: .env.example  .gitignore  Cargo.toml  Changelog.md  Octafile.yml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs
crates/api/src/entities/: project.rs  task.rs  user.rs
crates/api/src/handlers/: auth.rs  mod.rs  projects.rs  tasks.rs  users.rs
crates/api/src/service/mutation/: mod.rs  projects.rs  tasks.rs  users.rs
crates/api/src/service/query/: projects.rs  tasks.rs  users.rs
crates/api/src/workers/: clean.rs  clean_exchange.rs  clean_finished.rs  mod.rs
crates/executor/: Cargo.toml
crates/executor/src/: error.rs  executor.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: bindings.rs  engine.rs  error.rs  keyvalue.rs  lib.rs  manager.rs  plugin.rs  state.rs
crates/plugins/wit/: deps.toml  world.wit
migrations/: 20241114093441_create_users.down.sql  20241114093441_create_users.up.sql  20241114111529_create_projects.down.sql  20241114111529_create_projects.up.sql  20241114112319_create_tasks.down.sql  20241114112319_create_tasks.up.sql  20250627193354_add_status_start_at_index.down.sql  20250627193354_add_status_start_at_index.up.sql  20250627200059_add_locked_to_tasks.down.sql  20250627200059_add_locked_to_tasks.up.sql
src/: main.rs  utils.rs
