[package]
name = "octabot"
version = "0.1.0"
authors = ["Roman Efremenko <roman.efremenko@gmail.com>"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
openssl = { version = "0.9", features = ["vendored"] }
sqlx = { version = "0.8.3", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
  "chrono",
  "uuid",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures = "0.3.31"
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
octabot-api = { path = "crates/api" }
octabot-executor = { path = "crates/executor" }

[workspace]
resolver = "2"
members = ["crates/*"]

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
