[package]
name = "octabot"
version = "0.1.0"
authors = ["Roman Efremenko <roman.efremenko@gmail.com>"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "uuid",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures = "0.3.31"
rustls = { version = "0.23.28", features = ["ring"] }
tokio-tungstenite = { version = "0.27.0", features = [
  "rustls-tls-webpki-roots",
] }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
octabot-api = { path = "crates/api" }
octabot-executor = { path = "crates/executor" }

[workspace]
resolver = "2"
members = ["crates/*"]

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
