[package]
name = "octabot"
version = "0.1.1"
authors = ["Roman Efremenko <roman.efremenko@gmail.com>"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "uuid",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
wasmtime = { version = "35.0.0", features = [
  "component-model",
  "cranelift",
  "std",
  "runtime",
] }

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
rustls = { version = "0.23.31", features = ["ring"] }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
octabot-api = { path = "crates/api" }
octabot-executor = { path = "crates/executor" }

[workspace]
resolver = "2"
members = ["crates/*"]

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
