[package]
name = "octabot-api"
version = "0.0.4"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { workspace = true }
cron = "0.15.0"
duration-str = "0.17.0"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand_core = { version = "0.6.4", features = ["std"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = { workspace = true }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { workspace = true }
