[package]
name = "octabot-executor"
version = "0.1.0"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10.0"
cron = "0.14.0"
duration-str = "0.12.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
octabot-api = { path = "../api" }
