[package]
name = "octabot-executor"
version = "0.1.0"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10.1"
cron = "0.15.0"
duration-str = "0.12.0"
futures = "0.3.31"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
wasmtime = { version = "29.0.1", features = [
  "component-model",
  "cranelift",
  "std",
  "runtime",
] }
octabot-api = { path = "../api" }
octabot-plugins = { path = "../plugins" }
