[package]
name = "octabot-executor"
version = "0.0.4"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10.3"
cron = "0.15.0"
duration-str = "0.17.0"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
wasmtime = { workspace = true }
octabot-api = { path = "../api" }
octabot-plugins = { path = "../plugins" }
