[package]
name = "octabot-plugins"
version = "0.1.0"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22.1"
lazy_static = "1.5.0"
hyper = "1.6.0"
http = "1.2.0"
http-body-util = "0.1.2"
rustls = "0.23.22"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26.1"
wasmtime = { version = "29.0.1", features = [
  "component-model",
  "cranelift",
  "std",
  "runtime",
] }
wasmtime-wasi = "29.0.1"
wasmtime-wasi-http = "29.0.1"
wasmtime-wasi-keyvalue = "29.0.1"
wit-bindgen = "0.39.0"
webpki-roots = "0.26.8"
