[package]
name = "octabot-plugins"
version = "0.1.0"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22.1"
bytes = "1.0"
lazy_static = "1.5.0"
hyper = "1.6.0"
http = "1.3.1"
http-body-util = "0.1.3"
parking_lot = "0.12.4"
rustls = "0.23.28"
rustls-pemfile = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26.2"
wasmtime = { version = "34.0.1", features = [
  "component-model",
  "cranelift",
  "std",
  "runtime",
] }
wasmtime-wasi = "34.0.1"
wasmtime-wasi-http = "34.0.1"
wasmtime-wasi-keyvalue = "34.0.1"
wit-bindgen = "0.43.0"
webpki-roots = "1.0.1"
