[package]
name = "octabot-plugins"
version = "0.0.4"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = "1.0"
lazy_static = "1.5.0"
hyper = "1.6.0"
http = "1.3.1"
http-body-util = "0.1.3"
parking_lot = "0.12.4"
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26.2"
wasmtime = { workspace = true }
wasmtime-wasi = "35.0.0"
wasmtime-wasi-http = "35.0.0"
wasmtime-wasi-keyvalue = "35.0.0"
webpki-roots = "1.0.2"
